# pyBRIEF

./: LICENSE  Makefile  README.md  pyproject.toml
pybrief/: __init__.py  brief_descriptor.py  brief_extractor.py  brief_pattern.py  corners.py  filters.py  matching.py  nms.py  pybrief.py  utils.py
tests/: test_brief_descriptor.py  test_brief_extractor.py  test_brief_pattern.py  test_corners.py  test_filters.py  test_matching.py  test_nms.py  test_pybrief.py  test_utils.py
