[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybrief"
version = "0.2.0"
description = "Python implementation of BRIEF (Binary Robust Independent Elementary Features) descriptor"
readme = "README.md"
authors = [
    {name = "Joel Ibaceta", email = "joelibaceta@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["computer-vision", "image-processing", "feature-detection", "brief", "descriptor"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/joelibaceta/pyBRIEF"
Repository = "https://github.com/joelibaceta/pyBRIEF"
Issues = "https://github.com/joelibaceta/pyBRIEF/issues"

[tool.setuptools]
packages = ["pybrief"]

[tool.setuptools.package-data]
pybrief = ["py.typed"]
